# MasterThesis

./: .continueignore  .env.example  .gitignore  MySecrets.py.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1_initial_schema.py  20250628_add_malicious_enum.py  20250629_add_ids_to_threat_indicators.py  20250629_statupd.py  20250701_remove_analyst_verdict.py  20250702_move_columns_labels.py  a6566bab7e7c_initial_schema.py
alembic/versions_old/: 20240628_remove_raw_payload.py  20250628_make_threat_sha_nullable.py  20250629_tactupd.py  v0.5.0_cleanup.py
scripts/: etl.py  evaluate.py  fetch_data.py  pipeline.py  run_inference.py  split_data.py  train_model.py  train_new.py  utils.py
src/catlyst/: __init__.py  config.py  settings.py
src/catlyst/db/: __init__.py  connection.py  schema.py
src/catlyst/etl/: cli.py  db.py  s1_api.py  validation.py
src/s1_pipeline/: __init__.py  config.py  fetcher.py  utils.py
