[tool.poetry]
name = "Catlyst"
version = "0.1.0"
description = "A professional SentinelOne ML pipeline + API"
authors = ["Fabio Sauna"]
packages = [{ include = "catlyst", from = "src" }]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
numpy = "*"
scikit-learn = "*"
catboost = "*"
requests = "*"
tqdm = "*"
python-dateutil = "*"
nltk = "*"
imbalanced-learn = "*"
sqlalchemy = "*"
psycopg2 = "*"
python-dotenv = "*"
fastapi = "*"
backoff = "*"
pydantic-settings = "^2.9.1"

[tool.poetry.scripts]
ml-ingest = "catlyst.etl.cli:main"
ml-train = "catlyst.models.train:main"
ml-infer = "catlyst.models.infer:main"
ml-api = "catlyst.api:main"

[tool.poetry.group.dev.dependencies]
alembic = "^1.16.1"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"